<resources>
    <string name="app_name">My Application</string>
    <string name="ed1">Number 01</string>
    <string name="edittext01">editNumber01</string>
    <string name="ed2">Number 02</string>
    <string name="edittext02">editNumber02</string>
    <string name="button01">+</string>
    <string name="button02">-</string>
    <string name="button03">x</string>
    <string name="buitton04">/</string>
    <string name="answer01">Answer</string>
    <string name="txt01">Text View</string>
    <string name="button05">BACK</string>
    <string name="email01">E-mail</string>
    <string name="email02">E-mail</string>
    <string name="pw1">Enter Password</string>
    <string name="pw2">Re-enter Password</string>
    <string name="btn1">SUBMIT</string>
    <string name="btn2">CANCEL</string>
</resources>